<?xml version="1.0" encoding="utf-8"?>
<android.support.wearable.view.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".MainActivity"
    tools:deviceIds="wear"
    android:padding="16dp"
    android:background="@drawable/beach">
    <!--
    <TextView android:id="@+id/text" app:layout_box="all" android:layout_width="match_parent"
        android:layout_height="match_parent" android:text="@string/hello_world" android:gravity="center"/>

    <TextView android:id="@+id/clock" app:layout_box="all" android:layout_gravity="bottom|start"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textColor="@android:color/white" android:layout_centerInParent="true" />
    -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_box="all">

        <TextView
            android:id="@+id/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="#111111"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:layout_gravity="center_horizontal"
            android:paddingRight="40dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="onClickMore"
            android:textSize="8dp"
            android:visibility="gone"
            android:background="@drawable/buttons"
            android:layout_gravity="bottom|center_horizontal"
            android:text="More Quotes"
            android:layout_marginRight="20dp" />

        <Button android:id="@+id/button"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:background="@drawable/buttons"
            android:text="Awake"
            android:layout_gravity="center_vertical"
            android:onClick="onClickGeneral"
            android:textSize="8dp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:text="Exam"
            android:background="@drawable/buttons"
            android:layout_gravity="center"
            android:visibility="visible"
            android:onClick="onClickEducational"
            android:textSize="8dp"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:background="@drawable/buttons"
            android:text="Game"
            android:layout_gravity="right|center_vertical"
            android:onClick="onClickSports"
            android:textSize="8dp"
            android:layout_marginRight="20dp" />

    </FrameLayout>


</android.support.wearable.view.BoxInsetLayout>
